# pywhal

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build-dev.bat  build-dev32.bat  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.md
src/: main.cpp
src/cpp/: CMakeLists.txt  main.cpp
src/cpp/pywhal/: detours.hpp  memory.hpp  type_traits.hpp
src/cpp/pywhal/bindings/: hooks.hpp  memory.hpp
src/python/pywhal/: _core.pyi  _version.py  current_process_api.py  rpyc_service.py
src/python/pywhal/_internal/: process_handle.py  safe_module_handle.py  safe_resource.py  windows_definitions.py
src/python/pywhal/_internal/implementation/: hooks_impl.py  module_impl.py  process_handle_impl.py  process_impl.py  process_memory_impl.py  process_modules_impl.py  processes_impl.py  utils_impl.py
src/python/pywhal/_pywhalCore/: __init__.pyi  hooks.pyi  memory.pyi
src/python/pywhal/process/: hooks.py  memory.py  modules.py  processes.py  utils.py
src/pywhal/: __init__.py  _version.py
src/pywhal/process/: memory.py  modules.py
src/pywhal/rpc/: rpyc_service.py
tests/: test_basic.py  test_compiled.py  test_package.py
